Добавлены UI-тесты.

--- a/MovieQuiz.xcodeproj/xcshareddata/xcschemes/MovieQuiz.xcscheme
+++ b/MovieQuiz.xcodeproj/xcshareddata/xcschemes/MovieQuiz.xcscheme
@@ -44,6 +44,17 @@
                ReferencedContainer = "container:MovieQuiz.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "890219A62B44D4C40051C0FC"
+               BuildableName = "MovieQuizUITests.xctest"
+               BlueprintName = "MovieQuizUITests"
+               ReferencedContainer = "container:MovieQuiz.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
